# ToyProjects

./: README.md
C/CoppeConseza/: coppe_cosenza.c
CSharp/DIO.Series/: Program.cs
CSharp/DIO.Series/Classes/: Serie.cs
CommonLisp/greeting/: LICENSE  README.md
CommonLisp/greeting/greeting/: greeting.asd  greeting.lisp  package.lisp
Kotlin/perceptron/: main.kt  perceptron.kt  pom.xml
Python/apps-flask/Project1/: requirements-dev.txt  requirements.txt  script.sql  set-env.bat  settings.toml  setup.py  todo.txt
Python/apps-flask/Project1/src/: app.py  database.db
Python/apps-flask/Project2/: app.py  database.db  requirements.txt
Python/apps-flask/Project2/templates/: base.html  dashboard.html  home.html  login.html  register.html
Python/apps-flask/Project3/: Makefile  requirements.txt  settings.toml
Python/example-kv/: README.rst  log.txt  pyproject.toml  time.txt
Python/example-kv/example_kv/: example_1.py  example_2.kv  example_2.py  example_3.kv  example_3.py  kivymd_app.py  say_hello.kv  say_hello.py
Python/example-kv/tests/: test_example_kv.py
Python/market-basket-app/: README.rst  pyproject.toml
Python/market-basket-app/market_basket_app/v1/: requirements-dev.txt  requirements.txt  setup.py
Python/market-basket-app/market_basket_app/v1/core/: core.py
Python/market-basket-app/market_basket_app/v1/data/: market_basket.db
Python/market-basket-app/market_basket_app/v1/lang/: app.kv
Python/market-basket-app/market_basket_app/v1/src/: main.py
Python/market-basket-app/tests/: test_market_basket_app.py
(+19 files in other folders)
