[tool.poetry]
name = "example-kv"
version = "0.1.0"
description = "Experimenting with Kivy features"
authors = ["Richard Okubo"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
ffpyplayer = "^4.3.2"
buildozer = "^1.2.0"
Cython = "0.29.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
