[tool.poetry]
name = "market-basket-app"
version = "0.1.0"
description = ""
authors = ["Richard Okubo <richardlopesneves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
kivymd = "^0.104.2"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.5b2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
